objects/ReAssigning_Related_Records__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Execution_Number__c</fullName>
        <description>STS PR3.0 - Introduced new field to determine in which execution does the object undergoes DML.</description>
        <label>Execution Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter_Clause__c</fullName>
        <description>This clause will filter the records to be moved</description>
        <inlineHelpText>This clause will filter the records to be moved. Please use AND APIFIELDNAME = FIELDVALUE</inlineHelpText>
        <label>Filter Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDuplicate_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicate Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOutBusiness_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOutBusiness Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOutBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOutBusiness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_API__c</fullName>
        <label>Parent API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Field__c</fullName>
        <label>Require Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isClone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isClone</label>
        <type>Checkbox</type>
    </fields>
    <label>ReAssigning Related Records</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>Parent_API__c</columns>
        <columns>Require_Field__c</columns>
        <columns>Value__c</columns>
        <columns>isClone__c</columns>
        <columns>IsDuplicate__c</columns>
        <columns>IsDuplicate_Copy__c</columns>
        <columns>IsOutBusiness__c</columns>
        <columns>IsOutBusiness_Copy__c</columns>
        <columns>Filter_Clause__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>